--- a/Realtrend/Realtrend/Realtrend.csproj
+++ b/Realtrend/Realtrend/Realtrend.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\CustomStyling.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
