--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Realtrend/Realtrend/Realtrend.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Realtrend/Realtrend/Realtrend.csproj --no-restore
