--- a/Realtrend/Realtrend/Realtrend.csproj
+++ b/Realtrend/Realtrend/Realtrend.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Realtrend.Library\Realtrend.Library.csproj" />
+  </ItemGroup>
+
 </Project>
