--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,21 +1,30 @@
-name: .NET Build Only
+name: .NET Build and Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore Realtrend/Realtrend/Realtrend.csproj
-    - name: Build
-      run: dotnet build Realtrend/Realtrend/Realtrend.csproj --no-restore
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      
+      - name: Restore dependencies
+        run: dotnet restore Realtrend/Realtrend/Realtrend.csproj
+      
+      - name: Build
+        run: dotnet build Realtrend/Realtrend/Realtrend.csproj --no-restore
+      
+      - name: Test
+        run: dotnet test --logger trx
