--- a/Realtrend/Realtrend/Realtrend.csproj
+++ b/Realtrend/Realtrend/Realtrend.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
   </ItemGroup>
 
   <ItemGroup>
