--- a/Realtrend/Realtrend/Realtrend.csproj
+++ b/Realtrend/Realtrend/Realtrend.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
