--- a/Realtrend/RealTrend.UnitTests/RealTrend.UnitTests.csproj
+++ b/Realtrend/RealTrend.UnitTests/RealTrend.UnitTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BootstrapBlazor.Chart" Version="8.1.0" />
     <PackageReference Include="bunit" Version="1.27.17" />
     <PackageReference Include="fluentassertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
