--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -4,13 +4,17 @@ on:
   push:
     branches: 
       - main
+      - develop
   pull_request:
     branches: 
       - main
+      - develop
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    needs: Lint
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
