--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   run-linters:
-    runs-on: ubuntu-latest, windows-latest, macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out Git repository
